gac_sb/objects/AppATdossiersSalaries__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>ActionsMenee__c</fullName>
        <label>Actions menées</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assist. consultation dossier devant CPAM</fullName>
                </value>
                <value>
                    <fullName>Assist. demande de dossier</fullName>
                </value>
                <value>
                    <fullName>Assist. recours contre tiers</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. courrier de réserve</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. de la DAT/MP</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. questionnaire employeur AT</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. rapport geste et posture</fullName>
                </value>
                <value>
                    <fullName>Assist. réponse lettre d&apos;observation</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Explication gestion accident de trajet</fullName>
                </value>
                <value>
                    <fullName>Explication notif taux IPP inf.10%</fullName>
                </value>
                <value>
                    <fullName>Explication sur la rechute</fullName>
                </value>
                <value>
                    <fullName>Explication sur longueur arrêt</fullName>
                </value>
                <value>
                    <fullName>Externalisation à la DAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnneeCCMIP__c</fullName>
        <label>Année CCM IP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnneeCCMIT__c</fullName>
        <label>Année CCM IT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentairesInterimaire__c</fullName>
        <label>Commentaires intérimaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <description>Dossier de conseil</description>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateAttributionTauxIPP__c</fullName>
        <label>Date d&apos;attribution du taux d&apos;IPP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDemandeClient__c</fullName>
        <label>Date demande client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDemandeRente__c</fullName>
        <label>Date demande rente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePriseCharge__c</fullName>
        <label>Date de prise en charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceptionDossier__c</fullName>
        <label>Date réception dossier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceptionRente__c</fullName>
        <label>Date réception rente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSinistre__c</fullName>
        <label>Date du sinistre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_forclusion__c</fullName>
        <label>Date de forclusion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_forclusion_rente__c</fullName>
        <description>date de forclusion rente = Date d&apos;attribution du taux d&apos;IPP + 60 jours</description>
        <label>Date de forclusion rente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Décès</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EtablissementConcerne__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Etablissement concerné</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATetablissement__c.Mission__c</field>
                <operation>equals</operation>
                <valueField>$Source.Mission__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Dossiers Salariés</relationshipLabel>
        <relationshipName>DossiersSalaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FacturationPotentielleDossier__c</fullName>
        <label>Facturation Potentielle du dossier</label>
        <summarizedField>AppATrecours__c.FacturationPotentielle__c</summarizedField>
        <summaryFilterItems>
            <field>AppATrecours__c.RecoursPrincipal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FacturationPotentiellePondereeDossier__c</fullName>
        <label>Facturation potentielle pondérée dossier</label>
        <summarizedField>AppATrecours__c.FacturationPotentiellePonderee__c</summarizedField>
        <summaryFilterItems>
            <field>AppATrecours__c.RecoursPrincipal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IDimport__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID import (Ext)</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Imputation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputation</label>
        <referenceTo>AppATimputation__c</referenceTo>
        <relationshipLabel>Dossiers Salariés</relationshipLabel>
        <relationshipName>Dossiers_Salaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Imputations__c</fullName>
        <label>Imputations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interimaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intérimaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Dossiers Salariés</relationshipLabel>
        <relationshipName>DossiersSalaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MontantEconomieGlobaleRollup__c</fullName>
        <label>Montant de l&apos;économie Globale (Calculé)</label>
        <summarizedField>AppATrecours__c.MontantEconomieClient__c</summarizedField>
        <summaryFilterItems>
            <field>AppATrecours__c.RecoursPrincipal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MontantEconomieGlobale__c</fullName>
        <label>Montant de l&apos;économie Globale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDossier__c</fullName>
        <label>N° de dossier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreRecoursClos__c</fullName>
        <label>Nombre de recours clos</label>
        <summaryFilterItems>
            <field>AppATrecours__c.Statut__c</field>
            <operation>equals</operation>
            <value>Rejet, Accord, Abandon, Désistement</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NombreRecours__c</fullName>
        <label>Nombre de recours</label>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_d_imputations__c</fullName>
        <label>Nombre d&apos;imputations</label>
        <summaryForeignKey>AppATimputation__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_de_recours_principaux__c</fullName>
        <label>Nombre de recours principaux</label>
        <summaryFilterItems>
            <field>AppATrecours__c.RecoursPrincipal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumeroSecuriteSociale__c</fullName>
        <label>Numéro de sécurité sociale</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrigineDossierConseil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Origine Dossier Conseil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prénom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demandé</fullName>
                </value>
                <value>
                    <fullName>Audit en cours</fullName>
                </value>
                <value>
                    <fullName>Contestation en cours</fullName>
                </value>
                <value>
                    <fullName>Instruction en cours</fullName>
                </value>
                <value>
                    <fullName>Aucune piste identifiée</fullName>
                </value>
                <value>
                    <fullName>Refus de prise en charge</fullName>
                </value>
                <value>
                    <fullName>Classement du dossier</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_Date_envoi_mail_forclusion_rente__c</fullName>
        <label>TECH Date envoi mail forclusion rente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_Date_mail_forclusion__c</fullName>
        <description>Mis a jour avec la date a laquelle le WF doit envoyer le mail</description>
        <label>TECH Date envoi mail forclusion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TauxIPP__c</fullName>
        <label>Taux d&apos;IPP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalFacturationPotentiellePonderee__c</fullName>
        <label>Total Facturation Potentielle Pondérée</label>
        <summarizedField>AppATrecours__c.FacturationPotentiellePonderee__c</summarizedField>
        <summaryFilterItems>
            <field>AppATrecours__c.Statut__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFacturationPotentielle__c</fullName>
        <label>Total Facturation potentielle</label>
        <summarizedField>AppATrecours__c.FacturationPotentielle__c</summarizedField>
        <summaryFilterItems>
            <field>AppATrecours__c.Statut__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </summaryFilterItems>
        <summaryForeignKey>AppATrecours__c.DossierSalarie__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tous_les_recours_sont_clos__c</fullName>
        <formula>IF(NombreRecoursClos__c  = NombreRecours__c,
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tous les recours sont clos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>A Trajet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dossier Salarié</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_de_forclusion__c</columns>
        <columns>Date_de_forclusion_rente__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom du Dossier Salarié</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dossiers Salariés</pluralLabel>
    <recordTypes>
        <fullName>Assistance_administrative</fullName>
        <active>true</active>
        <description>Mission d&apos;assistance administrative</description>
        <label>Assistance administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conseil</fullName>
        <active>true</active>
        <description>Mission de conseil</description>
        <label>Conseil</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppAT_Dossier_salarie_num_SS</fullName>
        <active>false</active>
        <description>Valide le format du numéro de sécurité sociale
LEN(SUBSTITUTE(NumeroSecuriteSociale__c,&apos; &apos;,&apos;&apos;))=13||
LEN(SUBSTITUTE(NumeroSecuriteSociale__c,&apos; &apos;,&apos;&apos;))=15</description>
        <errorConditionFormula>NOT(LEN(SUBSTITUTE(NumeroSecuriteSociale__c,&apos; &apos;,&apos;&apos;))=15)&amp;&amp;
NOT(LEN(SUBSTITUTE(NumeroSecuriteSociale__c,&apos; &apos;,&apos;&apos;))=13)</errorConditionFormula>
        <errorDisplayField>NumeroSecuriteSociale__c</errorDisplayField>
        <errorMessage>Le numéro de sécurité sociale doit contenir 13 ou 15 chiffres</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppAT_dossier_salarie_statut_clos</fullName>
        <active>false</active>
        <description>Le statut ne peut être terminé si tous les recours ne le sont pas</description>
        <errorConditionFormula>ISPICKVAL(Statut__c ,&apos;Terminé&apos;) &amp;&amp;
 NombreRecours__c &lt;&gt; NombreRecoursClos__c &amp;&amp;
NombreRecours__c &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Statut__c</errorDisplayField>
        <errorMessage>Le dossier ne peut pas être terminé si tous les recours ne le sont pas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppAT_un_seul_recours_principal</fullName>
        <active>true</active>
        <errorConditionFormula>Nombre_de_recours_principaux__c &gt;1</errorConditionFormula>
        <errorMessage>Il ne peut y avoir qu&apos;un seul type de recours principal au maximum.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pas_de_signe_Pourcentage_dans_le_nom</fullName>
        <active>true</active>
        <description>Pas de signe % dans le nom du salarié</description>
        <errorConditionFormula>AND(CONTAINS(Nom__c,&apos;%&apos;) ,$User.LastName!=&apos;Synefo&apos;)</errorConditionFormula>
        <errorDisplayField>Nom__c</errorDisplayField>
        <errorMessage>Le nom du salarié ne peut pas contenir le signe &quot; % &quot;</errorMessage>
    </validationRules>
</CustomObject>